--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -55,8 +55,8 @@
 
         <!-- ICONO FORBES-->
         <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:id="@+id/icon"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Forbes"
+            android:text="El Pais(no funcional)"
             android:id="@+id/publisher"
             android:layout_toEndOf="@+id/icon"
             android:textStyle="bold"
