--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -70,9 +70,23 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="El Pais(no funcional)"
             android:id="@+id/publisher"
-            android:layout_toEndOf="@+id/icon"
             android:textStyle="bold"
-            android:layout_marginStart="16dp" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Fecha"
+            android:id="@+id/fechaPub"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
 
