--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
                 android:layout_weight="0.50"
                 android:layout_height="wrap_content"
                 android:text="Filtros"
-                android:id="@+id/button" />
+                android:id="@+id/btnFiltros" />
             <Spinner
                 android:layout_width="0dp"
                 android:layout_height="39dp"
