- Tot menos part grafica del spinner

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -4,5 +4,6 @@
         <item>Noticias</item>
         <item>Deportes</item>
         <item>Tecnología</item>
+        <item>Otros</item>
     </string-array>
 </resources>
